[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spark-fuse-messenger"
version = "0.3.0"
description = "Python client library for the Spark Fuse GPU compute API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
spark-fuse = "spark_fuse.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/spark_fuse"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8",
]
